# ecs189g

./: .gitignore  gurobi.lic
hw0-handout/: README.md  helpers.py  my_test.py  part1_training.py  part2_attacking.py  part3_editing.py  pyproject.toml  submission_files.txt  test.py  utils.py  zip_submission.sh
hw0-handout/artifacts/: adversarial_examples.pt  edited_last_layer.pt  model.pt
hw1-handout/: README.md  helpers.py  model.pt  part1.py  part2.py  part2_analyze.py  pyproject.toml  run_test.py  submission_files.txt  sytorch.lic  test.py  zip_submission.sh
hw1-handout/artifacts/: edited_model_part1.pt  edited_model_part2.pt  edited_model_part2_2307.pt
hw1-handout/my_model/part1/: full_results.csv  summary.csv
hw1-handout/my_model/part2/: best_config.json  best_config_23.json  current_best_22.json  filtered_results_one_batch.csv  full_results.csv  full_results_max_23.csv  full_results_one_batch.csv
hw2-handout/: README.md  helpers.py  members.txt  part1.py  part2.py  pyproject.toml  submission_files.txt  test.py  utils.py  zip_submission.sh
